--- a/data/zumen/package=package.json.ejs
+++ b/data/zumen/package=package.json.ejs
@@ -1,24 +1,23 @@
 {
-  "name": "dodai",
+  "name": "<%= name %>",
   "version": "0.0.6",
   "description": "npm module",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
   "module": "dist/index.esm.js",
-  "browser": "dist/dodai.js",
+  "browser": "dist/<%= name %>.js",
   "bin": {
-    "dodai": "dist/bin/index.js"
+    "<%= name %>": "dist/bin/index.js"
   },
   "files": [
     "package.json",
     "README.md",
     "LICENSE",
     "types",
-    "dist",
-    "data"
+    "dist"
   ],
   "keywords": [
-    "dodai"
+    "<%= name %>"
   ],
   "license": "MIT",
   "scripts": {
@@ -33,12 +32,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/trysd/npm-dodai.git"
+    "url": "<%= repository_url %>"
   },
   "bugs": {
-    "url": "https://github.com/trysd/npm-dodai/issues"
+    "url": "<%= issue_url %>"
   },
-  "homepage": "https://github.com/trysd/npm-dodai#readme",
+  "homepage": "<%= readme_url %>",
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -76,7 +75,7 @@
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.5.3",
-    "zumen": "^1.0.14"
+    "zumen": "^1.0.13"
   },
   "engines": {
     "node": ">=14"
