--- a/data/zumen/package=package.json.ejs
+++ b/data/zumen/package=package.json.ejs
@@ -28,7 +28,8 @@
     "lint-staged": "lint-staged",
     "start": "browser-sync start --config \"./.bs-config.js\"",
     "test": "jest",
-    "dev": "nodemon"
+    "dev": "npx ts-node-dev --respawn src/index.ts",
+    "bin": "npx ts-node-dev --respawn src/bin/index.ts"
   },
   "repository": {
     "type": "git",
@@ -74,6 +75,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.5.3",
     "zumen": "^1.0.13"
   },
