fix: some repairs

--- a/data/zumen/package=package.json.ejs
+++ b/data/zumen/package=package.json.ejs
@@ -29,7 +29,7 @@
     "start": "browser-sync start --config \"./.bs-config.js\"",
     "test": "jest",
     "dev": "npx ts-node-dev --respawn src/index.ts",
-    "bin": "npx ts-node-dev --respawn src/bin/index.ts"
+    "command": "npx ts-node-dev --respawn src/bin/index.ts"
   },
   "repository": {
     "type": "git",
